force-app/main/default/objects/ProductTable__c/ProductTable__c.object-meta.xml
<CustomObject>
    <label>ProductTable</label>
    <nameField>
        <label>Product Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>