force-app/main/default/objects/ProductTable__c/fields/AddedDate__c.field-meta.xml
<CustomField>
    <fullName>AddedDate__c</fullName>
    <label>AddedDate</label>
    <type>DateTime</type>
</CustomField>