force-app/main/default/objects/ProductTable__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>ProductType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductTypePicklist</valueSetName>
    </valueSet>
</CustomField>