force-app/main/default/objects/ProductTable__c/fields/ReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>ReleaseDate__c</fullName>
    <label>ReleaseDate</label>
    <type>Date</type>
</CustomField>