force-app/main/default/objects/ProductTable__c/validationRules/ValidateAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateAmount</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Invalid value</errorMessage>
</ValidationRule>