force-app/main/default/objects/ProductTable__c/validationRules/ValidatePrice.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidatePrice</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Invalid value</errorMessage>
</ValidationRule>