force-app/main/default/objects/ProductTable__c/validationRules/ValidateReleaseDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateReleaseDate</fullName>
    <active>true</active>
    <errorConditionFormula>ReleaseDate__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>ReleaseDate__c</errorDisplayField>
    <errorMessage>Invalid value</errorMessage>
</ValidationRule>